Grok Connect: Changed driver, fixed issue