@@ -6,17 +6,24 @@ import grok_connect.connectors_info.DataSource;
 import grok_connect.connectors_info.DbCredentials;
 import grok_connect.connectors_info.FuncParam;
 import grok_connect.utils.*;
+import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.sql.Connection;
+import java.sql.Driver;
 import java.sql.SQLException;
 import java.util.*;
 
 public class NeptuneDataProvider extends JdbcDataProvider {
-    private static final List<String> SUPPORTED_VERSIONS =
-            Collections.unmodifiableList(Arrays.asList("< 1.2.0.0 and >= 1.1.1.0", ">= 1.2.0.0"));
+    private static final Map<String, String> SUPPORTED_VERSIONS = new HashMap<>();
+
+    static {
+        SUPPORTED_VERSIONS.put("< 1.2.0.0", "neptune-jdbc-2.0.0-all.jar");
+        SUPPORTED_VERSIONS.put(">= 1.2.0.0", "amazon-neptune-jdbc-driver-3.0.0-all.jar");
+    }
+
     public NeptuneDataProvider(ProviderManager providerManager) {
         super(providerManager);
         driverClassName = "software.aws.neptune.NeptuneDriver";
@@ -24,8 +31,9 @@ public class NeptuneDataProvider extends JdbcDataProvider {
         descriptor.type = "Neptune";
         descriptor.commentStart = "//";
         descriptor.description = "Amazon Neptune is a fully managed graph database service";
-        Property engine = new Property(Property.STRING_TYPE, "engineVersion");
-        engine.choices = SUPPORTED_VERSIONS;
+        Property engine = new Property(Property.STRING_TYPE, DbCredentials.ENGINE_VERSION,
+                "Amazon Neptune engine version");
+        engine.choices = new ArrayList<>(SUPPORTED_VERSIONS.keySet());
         descriptor.connectionTemplate = new ArrayList<Property>() {{
             add(new Property(Property.STRING_TYPE, DbCredentials.SERVER));
             add(new Property(Property.INT_TYPE, DbCredentials.PORT, new Prop()));
@@ -65,29 +73,31 @@ public class NeptuneDataProvider extends JdbcDataProvider {
     }
 
     public Connection getConnection(DataConnection conn) throws SQLException {
-        String engineVersion = conn.get("engineVersion");
-        if (engineVersion.equals(SUPPORTED_VERSIONS.get(0))) {
-            loadDriver("neptune-jdbc-2.0.0-all.jar");
-        } else {
-            loadDriver("amazon-neptune-jdbc-driver-3.0.0.jar");
+        String engineVersion = conn.get(DbCredentials.ENGINE_VERSION);
+        if (engineVersion == null) {
+            throw new RuntimeException("Engine version is mandatory");
         }
-        return CustomDriverManager.getConnection(getConnectionString(conn), getProperties(conn), driverClassName);
+        Driver driver = getDriver(SUPPORTED_VERSIONS.get(engineVersion));
+        return driver.connect(getConnectionString(conn), getProperties(conn));
     }
 
-    private void loadDriver(String name) {
-       String baseDir = getBaseDirName();
+    private Driver getDriver(String name) {
+        String baseDir = getBaseDirName();
+        File file = new File( String.format("%s/lib/%s", baseDir, name));
         try {
-            URLClassLoader child = new URLClassLoader (new URL[] {new URL(String.format("jar:file://%s/lib/%s!/",
-                    baseDir, name)).toURI().toURL()},
-                    NeptuneDataProvider.class.getClassLoader());
-            Class.forName(driverClassName, true, child);
-        } catch (MalformedURLException | URISyntaxException | ClassNotFoundException e) {
-            throw new RuntimeException(e);
+            URLClassLoader child = new URLClassLoader (new URL[] {file.toURI().toURL()},
+                    this.getClass().getClassLoader());
+            Class<?> aClass = Class.forName(driverClassName, true, child);
+            return (Driver) aClass.getConstructor().newInstance();
+        } catch (MalformedURLException | ClassNotFoundException | InvocationTargetException
+                 | InstantiationException |
+                 IllegalAccessException | NoSuchMethodException e) {
+            throw new RuntimeException("Something went wrong when getting driver", e);
         }
     }
 
     private String getBaseDirName() {
-        Properties props = GrokConnect.getInfo();
+        Properties props = GrokConnect.properties;
         return props.get("basedir").toString();
     }
 
